# new-grad

./: .gitignore  CLAUDE.md  DOCS.md  README.md  companies.txt  pyproject.toml  requirements-dev.txt  requirements.txt  seen.json
.github/workflows/: scan.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/debug/: apple-api-deprecated.md  bug-f-new-adapters.md  playwright-timeout-cname-bugs.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: ai_classifier.py  config_loader.py  filter.py  locations.py  main.py  models.py  normalizer.py  registry.py  renderer.py  state_merger.py  state_store.py  url_resolver.py
src/adapters/: apple.py  ashby.py  base.py  greenhouse.py  lever.py  oracle_hcm.py  playwright_fallback.py  smartrecruiters.py  workday.py
tests/: test_adapter_base.py  test_adapter_contract.py  test_ai_classifier.py  test_apple_adapter.py  test_ashby_adapter.py  test_config_loader.py  test_credential_flow.py  test_end_to_end.py  test_filter.py  test_greenhouse_adapter.py  test_lever_adapter.py  test_locations.py  test_models.py  test_normalizer.py  test_oracle_hcm_adapter.py  test_orchestrator.py  test_playwright_adapter.py  test_registry.py  test_renderer.py  test_smartrecruiters_adapter.py  test_state_merger.py  test_state_store.py  test_url_resolver.py  test_workday_adapter.py  test_workflow_yaml.py
tests/fixtures/: anthropic_sample.html  anthropic_sample.json  apple_sample.json  ashby_sample.json  (+6 more)
(+39 files in other folders)
