[project]
name = "new-grad"
version = "0.1.0"
description = "Hourly new-grad / early-career job tracker — public GitHub repo as the database."
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
